--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
-/* @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body: {
+  height: '100vh', 
+  margin: 0,       
+  padding: 0,      
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
+link: {
+  textDecoration: 'none',
+}
+
+homePage: {
+}
+
+myName: {
+}
+
+ulHomePage: {
+  listStyleType: 'none',
+}
