--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,5 @@
 body {
-  height: '100vh';
-  margin: 0;  
-  padding: 0;  
+  background-color: rgb(20,20,20);
 }
 
 .hi {
@@ -26,6 +24,7 @@ body {
   margin-top: 5%;
   margin-left: 7%;
   margin-bottom: 0;
+  color: aliceblue;
 }
 
 .meDesc {
@@ -33,12 +32,14 @@ body {
   font-size: 1.25rem;
   margin-top: 0; 
   margin-left: 7%;
+  color: aliceblue;
 }
 
 .link {
   text-decoration: none;
   line-height: 2rem;
   font-family: 'Quicksand', sans-serif;
+  color: aliceblue;
 }
 
 .ulHomePage {
